2004-11-10 Chris Wiebe

	additional case for 78200
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java

2004-11-10 Chris Wiebe

	Fix for 78200
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewFileWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewHeaderFileCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewSourceFileCreationWizardPage.java

2004-11-05 Alain Magloire
	Framework for code formatter.
	* src/org/eclipse/cdt/internal/coreext/CodeFormatterUtil.java
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/preferences/CodeFormatterPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CFormattingStrategy.java
	* src/org/eclipse/cdt/ui/dialogs/CodeFormatterBlock.java
	* plugin.xml
	* plugin.properties

2004-11-05 Chris Wiebe

	Fix for 56204 - empty source files are no longer created
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java

2004-11-05 Chris Wiebe

	Remove option to use an existing class as enclosing type (defer to future release)
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassWizardMessages.properties

2004-11-04 Alain Magloire
	Fix for 77825 from (Mikhail Voronin)
	* src/org/eclipse/cdt/internal/ui/text/CHelpProviderDescriptor.java

2004-11-02 Tanya Wolff
	Fixed content assist extensibility for 77482 - changed context condition 
	for addProposalsFromCompletionContributors() & 	fixed cursor position
	* src/org/eclipse/cdt/internal/ui/text/contentassist/CCompletionProcessor.java

2004-11-01 Alain Magloire
	Patch from Mikhail Voronin to implement 71240.
	Too many changes to enumerate refer to PR: